fixed the endpoints for the monitoring and eval
